# elwindui

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml
.claude/: settings.json
crates/elwindui/: Cargo.toml
crates/elwindui-backend-appkit/: Cargo.toml
crates/elwindui-backend-appkit/src/: inner.rs  lib.rs  native_ui.rs  vector_renderer.rs
crates/elwindui-backend-appkit/src/builtins/: mod.rs  tab_view.rs
crates/elwindui-backend-egui/: Cargo.toml
crates/elwindui-backend-egui/src/: lib.rs
crates/elwindui-backend-gtk4/: Cargo.toml
crates/elwindui-backend-gtk4/src/: lib.rs
crates/elwindui-backend-iced/: Cargo.toml
crates/elwindui-backend-iced/src/: lib.rs
crates/elwindui-backend-winui3/: Cargo.toml  build.rs
crates/elwindui-backend-winui3/cpp/: app_host.cpp
crates/elwindui-backend-winui3/src/: inner.rs  lib.rs  native_ui.rs
crates/elwindui-backend-winui3/src/builtins/: mod.rs  tab_view.rs
crates/elwindui-builtins/: Cargo.toml
crates/elwindui-builtins/src/: builtins.elwind  lib.rs
crates/elwindui-builtins/src/appkit/: mod.rs  tab_view.rs
crates/elwindui-builtins/src/shapes/: button.elwind  column.elwind  content_control.elwind  control.elwind  ellipse.elwind  grid.elwind  horizontal_layout.elwind  menu.elwind  menu_bar.elwind  menu_bar_item.elwind  menu_item.elwind  native_component.elwind  native_control.elwind  rectangle.elwind  row.elwind  shape.elwind  tab_view.elwind  tab_view_item.elwind  text.elwind  text_area.elwind  text_block.elwind  vertical_layout.elwind  window.elwind
crates/elwindui-builtins/src/winui3/: mod.rs  tab_view.rs
crates/elwindui-codegen/: Cargo.toml
crates/elwindui-codegen/src/: ast.rs  attr_frontend.rs  builtins.elwind  codegen.rs  component_frontend.rs  lib.rs  parser.rs  validate.rs
crates/elwindui-core/: Cargo.toml
crates/elwindui-core/src/: accessibility.rs  base.rs  element.rs  error.rs  focus.rs  input.rs  layout.rs  lib.rs  painter.rs  reactive.rs  task.rs  tree.rs  ui.rs  visual_tree.rs
crates/elwindui-core/src/graphics/: color.rs  command.rs  context.rs  image.rs  mod.rs  path.rs  path_combine.rs  stroke.rs  vector_filter.rs  vector_image.rs  vector_scene.rs
crates/elwindui-core/src/painter/: brush.rs  color.rs  command.rs  context.rs  mod.rs  path.rs  render_tree.rs  stroke.rs
crates/elwindui-hotreload/: Cargo.toml
crates/elwindui-hotreload/src/: lib.rs
crates/elwindui-i18n/: Cargo.toml
crates/elwindui-i18n/src/: lib.rs
crates/elwindui-languageserver/: Cargo.toml
crates/elwindui-languageserver/src/: completion.rs  diagnostics.rs  lib.rs  main.rs  semantic_tokens.rs
crates/elwindui-languageserver/tests/: lsp_integration.rs
crates/elwindui-macros/: Cargo.toml
crates/elwindui-macros/src/: class.rs  lib.rs  new_call.rs
crates/elwindui-svg/: Cargo.toml
crates/elwindui-svg/src/: convert.rs  convert_filter.rs  convert_paint.rs  convert_path.rs  error.rs  lib.rs  loader.rs  resolver.rs
crates/elwindui-test/: Cargo.toml
crates/elwindui-test/src/: canvas.rs  lib.rs  tree.rs
crates/elwindui/src/: lib.rs
crates/elwindui/tests/: viewmodel_self_referential_assignment.rs
docs/: elwindui_builtins_spec.md  elwindui_dsl_spec.md  elwindui_gui_framework_design.md  elwindui_implementation_status.md  elwindui_macos_gui_test_driver_status.md  elwindui_macro_class_spec.md  elwindui_nativecontrol_expansion_status.md  elwindui_spec.md  elwindui_tool_codegen_design.md  elwindui_tool_hotreload_design.md  elwindui_tool_languageserver_design.md  elwindui_tool_preview_design.md
docs/agents/: windows.md  winui3_current_state.md
examples/controls-demo/: Cargo.toml
examples/controls-demo/src/: main.rs
examples/graphics-demo/: Cargo.toml
examples/graphics-demo/src/: main.rs
examples/notepad/: Cargo.toml  build.rs
examples/notepad-inline/: Cargo.toml
examples/notepad-inline/src/: main.rs
examples/notepad/src/: main.rs
examples/notepad/src/ui/: document_view.elwind  notepad_viewmodel.elwind  notepad_window.elwind  rounded_panel.elwind
examples/notepad/strings/: en.ftl
examples/painter-demo/: Cargo.toml
examples/painter-demo/src/: main.rs
examples/viewmodel-attr-demo/: Cargo.toml
examples/viewmodel-attr-demo/src/: main.rs
tools/: restore-winui3.ps1  setup-vs-env.ps1
tools/macos-ui-driver/: Package.swift  README.md
tools/macos-ui-driver/Sources/macos-ui-driver/: main.swift
