[package]
name = "elwindui-backend-appkit"
version.workspace = true
edition.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
elwindui-core = { path = "../elwindui-core" }
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry", "NSNotification", "NSURL"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSResponder",
    "NSWindow",
    "NSView",
    "NSGraphics",
    "NSControl",
    "NSButton",
    "NSTextField",
    "NSText",
    "NSTextView",
    "NSScrollView",
    "NSStackView",
    "NSUserInterfaceLayout",
    "NSRunningApplication",
    "NSSavePanel",
    "NSOpenPanel",
    "NSMenu",
    "NSMenuItem",
] }
