[package]
name = "elwindui-backend-appkit"
version.workspace = true
edition.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
elwindui-core = { path = "../elwindui-core" }
elwindui-macros = { path = "../elwindui-macros" }
objc2 = "0.6"
dispatch2 = "0.3"
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry", "NSNotification", "NSURL"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSResponder",
    "NSWindow",
    "NSView",
    "NSEvent",
    "NSTrackingArea",
    "NSGraphics",
    "NSControl",
    "NSButton",
    "NSTextField",
    "NSText",
    "NSTextView",
    "NSScrollView",
    "NSStackView",
    "NSLayoutConstraint",
    "NSUserInterfaceLayout",
    "NSRunningApplication",
    "NSSavePanel",
    "NSOpenPanel",
    "NSMenu",
    "NSMenuItem",
    "NSImage",
    "NSBitmapImageRep",
    "NSGraphicsContext",
    "objc2-quartz-core",
] }
objc2-quartz-core = { version = "0.3.2", features = ["CALayer", "CAShapeLayer", "CATextLayer", "CAGradientLayer"] }
objc2-core-graphics = { version = "0.3.2", features = ["CGPath", "CGColor", "CGColorSpace", "CGGeometry", "CGAffineTransform", "CGGradient", "CGImage", "CGDataProvider", "CGBitmapContext", "CGContext"] }
objc2-core-foundation = "0.3.2"

[lints]
workspace = true
