[package]
name = "elwindui-backend-appkit"
version.workspace = true
edition.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
elwindui-core = { path = "../elwindui-core" }
elwindui-macros = { path = "../elwindui-macros" }
objc2 = "0.6"
dispatch2 = "0.3"
objc2-foundation = { version = "0.3", features = ["NSString", "NSGeometry", "NSNotification", "NSURL", "NSDictionary", "NSValue"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSResponder",
    "NSWindow",
    "NSView",
    "NSEvent",
    "NSTrackingArea",
    "NSGraphics",
    "NSControl",
    "NSButton",
    "NSTextField",
    "NSSecureTextField",
    "NSText",
    "NSTextView",
    "NSScrollView",
    "NSStackView",
    "NSLayoutConstraint",
    "NSUserInterfaceLayout",
    "NSRunningApplication",
    "NSSavePanel",
    "NSOpenPanel",
    "NSMenu",
    "NSMenuItem",
    "NSImage",
    "NSBitmapImageRep",
    "NSGraphicsContext",
    "objc2-quartz-core",
] }
objc2-quartz-core = { version = "0.3.2", features = ["CALayer", "CAShapeLayer", "CATextLayer", "CAGradientLayer"] }
objc2-core-graphics = { version = "0.3.2", features = ["CGPath", "CGColor", "CGColorSpace", "CGGeometry", "CGAffineTransform", "CGGradient", "CGImage", "CGDataProvider", "CGBitmapContext", "CGContext"] }
objc2-core-foundation = "0.3.2"
objc2-core-image = { version = "0.3.2", features = ["CIFilter", "CIImage", "CIContext", "CIVector", "CIColor"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
# Test-only: golden-image comparison against `resvg`'s own rasterization (実装指示書§22.8).
# Production `DrawVectorImage` rendering never depends on `elwindui-svg`/`usvg`/`resvg` — see
# `vector_renderer.rs`'s own module doc comment.
elwindui-svg = { path = "../elwindui-svg" }
resvg = "0.47"

[lints]
workspace = true
