[package]
name = "elwindui-backend-winui3"
version.workspace = true
edition.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
elwindui-core = { path = "../elwindui-core" }
elwindui-macros = { path = "../elwindui-macros" }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Foundation",
    "Foundation_Collections",
    "ApplicationModel_Activation",
    "Graphics",
    "Graphics_Imaging",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11",
    "Graphics_Effects",
    "Storage",
    "Storage_Streams",
    "System",
    "UI",
    "UI_Core",
    "UI_Text",
] }
windows-core = "0.62"
windows-collections = "0.3"
windows-future = "0.3"
windows-numerics = "0.3"

[target.'cfg(target_os = "windows")'.build-dependencies]
windows-bindgen = "0.62"

[lints]
workspace = true
