[package]
name = "elwindui-languageserver"
version.workspace = true
edition.workspace = true

[dependencies]
elwindui-codegen = { path = "../elwindui-codegen" }
lsp-server = "0.7"
lsp-types = "0.97"
serde_json = "1"
# lsp-types 0.97 dropped the old `url::Url` re-export in favor of its own low-level `Uri` (a thin
# `fluent_uri` wrapper with no `to_file_path`/`from_file_path`); `url` is added directly just for
# that well-tested file-path <-> URI conversion (percent-encoding, Windows drive letters, etc.)
# rather than hand-rolling it against `fluent_uri`'s lower-level API.
url = "2"
