[package]
name = "notepad"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
elwindui = { path = "../../crates/elwindui", features = ["backend-appkit"] }
elwindui-core = { path = "../../crates/elwindui-core" }
elwindui-backend-appkit = { path = "../../crates/elwindui-backend-appkit" }
elwindui-builtins = { path = "../../crates/elwindui-builtins", features = ["backend-appkit"] }
fluent-bundle = "0.15"
unic-langid = "0.9"

[build-dependencies]
elwindui-codegen = { path = "../../crates/elwindui-codegen" }
