[package]
name = "notepad"
version.workspace = true
edition.workspace = true
publish = false
build = "build.rs"

[dependencies]
elwindui = { path = "../../crates/elwindui", features = ["backend-appkit", "backend-winui3"] }

[build-dependencies]
elwindui-codegen = { path = "../../crates/elwindui-codegen" }

[lints]
workspace = true
